# bunko

./: .gitignore  CLAUDE.md  DESIGN.md  MANUAL.md  README.md  aozora2epub.py  aozora_kobo.py  aozora_shinkan.py  pubspec.yaml  pyproject.toml
aozorabunko/: __init__.py  card.py  catalog.py  corpus.py  db.py  formats.py  parser.py
aozorabunko/data/: README.md  accent_table.json
app/bunko/: README.md  pubspec.yaml
app/bunko/.claude/: launch.json
app/bunko/android/app/: build.gradle.kts
app/bunko/ios/Runner/: Info.plist
app/bunko/ios/Runner.xcodeproj/: project.pbxproj
app/bunko/lib/: main.dart
app/bunko/lib/data/: aozora_parser.dart  db.dart  db_io.dart  dojinshi_directory.dart  fetch.dart  models.dart  my_library.dart  toc.dart
app/bunko/lib/print/: print_pages.dart  print_preview.dart
app/bunko/lib/ui/: audiobook_controller.dart  card_page.dart  card_view.dart  reader_page.dart  ruby_text.dart  shelf_page.dart  tts_controller.dart  vertical_reader.dart
app/bunko/linux/runner/: my_application.cc
app/bunko/macos/Flutter/: GeneratedPluginRegistrant.swift
app/bunko/macos/Runner.xcodeproj/: project.pbxproj
app/bunko/test/: db_migrate_test.dart  dojinshi_directory_test.dart  my_library_test.dart  parser_test.dart  print_pages_test.dart  toc_test.dart  vertical_reader_test.dart
app/bunko/tool/: build_assets.py
app/bunko/windows/: CMakeLists.txt
app/bunko/windows/runner/: Runner.rc  main.cpp
app/kobo/: aozora2epub.py  aozora_kobo.py  aozora_tts.py  pyproject.toml
app/kobo/tests/: test_decorate.py  test_regression.py
app/pykobo/: .gitignore  CLAUDE.md  README.md  aozora_kobo.py  aozora_shinkan.py  aozora_tts.py  kobo_theme.py  main.py  pyproject.toml  requirements.txt
app/pykobo/pybunko/: accent.py  ai.py  audio.py  catalog.py  census.py  convert.py  corpus.py  db.py  decorate.py  formats.py  gaiji.py  kosei.py  ndl.py  official.py  parser.py  vision.py  xlsx.py
app/pykobo/pybunko/data/: README.md
app/pykobo/tests/: conftest.py  test_accent.py  test_audio.py  test_card.py  test_decorate.py  test_golden.py  test_kosei.py  test_ndl.py  test_regression.py  test_vision.py
assets/: README.md  jis2ucs.json
docs/: DESIGN.md  HANDOFF.md  KUMIHAN.md  LICENSING.md  MANUAL.md  official-xhtml.md  pybunko.md
forms/: README.md
forms/app/: README.md  pubspec.yaml
forms/app/android/app/: build.gradle.kts
forms/app/ios/Runner.xcodeproj/: project.pbxproj
forms/app/lib/: api.dart  backup.dart  db.dart  main.dart  models.dart  sync.dart
forms/app/linux/: CMakeLists.txt
forms/app/test/: widget_test.dart
forms/app/windows/: CMakeLists.txt
forms/builder/: form-builder.html  form-example.html  form-schema.json  form-template.html  form_xlsx.py
forms/examples/: お問い合わせ.adoc
forms/flet/: .gitignore  README.md  api.py  backup.py  db.py  detail_view.py  help_view.py  list_view.py  main.py  pyproject.toml  qr.py  settings_view.py  sync.py  現場ガイド.md
lib/: main.dart  theme.dart
lib/data/: aozora_parser.dart  card_parser.dart  db_io.dart  db_web.dart  sjis.dart
lib/ui/: ruby_text.dart  shelf_page.dart  vertical_reader.dart
linux/: CMakeLists.txt
pyaozora/: CLAUDE.md  README.md  converter.py  fonts.py
pyaozora/examples/: viewer_sangetsuki.html
pyaozora/pyaozora/: converter.py
pybunko/: audio.py  catalog.py  convert.py  corpus.py  db.py  formats.py  kosei.py  ndl.py
pybunko.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pybunko/data/: README.md  gaiji_jisho.json  kosei_ocr.txt
test/: parser_test.dart  widget_test.dart
tests/: conftest.py  test_accent.py  test_ai.py  test_audio.py  test_card.py  test_compat.py  test_convert.py  test_corpus.py  test_db.py  test_decorate.py  test_dir.py  test_font.py  test_golden.py  test_header.py  test_img.py  test_notes.py  test_regression.py  test_washi.py  test_xlsx.py
tool/: build_assets.py
tools/: build_assets.py  build_gaiji_jisho.py  build_gaiji_table.py
web/: index.html  manifest.json
(+18 files in other folders)
