[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aozorabunko"
version = "0.1.0"
description = "青空文庫をPythonから ── 静的な正本だけに依存する検索・パース・変換ライブラリ"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["aozora", "aozorabunko", "japanese", "ebook", "epub"]
dependencies = []

[project.optional-dependencies]
epub = ["ebooklib>=0.18"]
# 縦書き・原稿用紙・PDF組版は aiseed-dev/washi-md に委譲（Phase 7 で結線）。
# 現状 washi-md は git インストール。本体既定には含めない。
washi = ["washi-md>=0.8"]

[tool.setuptools]
packages = ["aozorabunko"]
