[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# 注意: このパッケージは個別にはPyPIへ登録しない（ユーザー決定 2026-07-11）。
# ローカルの編集インストール（pip install -e '.[epub]'）専用。
[project]
name = "pybunko"
version = "0.1.0"
description = "文庫（bunko）のPython側 ── 青空文庫の正本をUnicode構造化データに変換し、JSON/SQLite/EPUB/公式XHTML/フォント資産を生む"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
keywords = ["aozora", "aozorabunko", "bunko", "japanese", "ebook", "epub"]
dependencies = []

[project.scripts]
# Shift_JIS 注記付きテキスト → Unicode JSON
pybunko = "pybunko.__main__:main"

[project.optional-dependencies]
epub = ["ebooklib>=0.18"]
# 縦書き・原稿用紙・PDF組版は aiseed-dev/pywashi に委譲（PyPI名=pywashi。
# CLI/ブランド名は washi のまま ── "washi-md"は"md"がmarkdownの略語で
# 冗長だったためpywashiに改称、PyPI上の"washi"は別プロジェクトのため不採用）
washi = ["pywashi>=0.10.1"]
# 執筆をAsciiDocでも(青空注記の代わりに)行う場合。pywashiのformat="asciidoc"
# （要pywashi>=0.10.1）が内部でpyasciidocに委譲する
asciidoc = ["pyasciidoc>=0.4.2", "pywashi>=0.10.1"]
# 全作品コーパスの列指向エクスポート（研究・NLP・RAG向け）
parquet = ["pyarrow>=14"]
# 外字グリフのサブセット埋め込み（official.to_official_html(gaiji='font', embed_font=True)）
font = ["fonttools>=4.40", "brotli"]
# 朗読パックの事前生成（edge-ttsエンジン。VOICEVOXはローカルRESTのため依存不要。要ffmpeg）
audio = ["edge-tts>=6"]

[tool.setuptools]
packages = ["pybunko"]

[tool.setuptools.package-data]
# 外字・アクセント対応表（aozora2html由来 CC0）と出典README を同梱
pybunko = ["data/*"]
